--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ajv": "^8.17.1",
     "axios": "^1.7.3",
     "formik": "^2.4.6",
     "react": "^18.3.1",
